# head-pose-estimation

./: CMakeLists.txt  README.md
src/: head_pose_module.py  head_pose_wrapper.cpp  head_pose_wrapper.h  track_head.cpp  track_head.py
